--- a/src/main/webapp/vista/index.html
+++ b/src/main/webapp/vista/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Buscador de clientes</h1>
-        <form action="" method="GET">
+        <form action="JSP/misclientesList.jsp" method="GET">
             <fieldset>
                 <legend>Número de salidas por página</legend>
                 <label for="txtPaginas">Salidas</label>
