--- a/src/main/webapp/vista/index.html
+++ b/src/main/webapp/vista/index.html
@@ -6,11 +6,11 @@
     </head>
     <body>
         <h1>Buscador de clientes</h1>
-        <form action="JSP/misclientesList.jsp" method="GET">
+        <form action="buscadorclientes" method="GET">
             <fieldset>
                 <legend>Número de salidas por página</legend>
                 <label for="txtPaginas">Salidas</label>
-                <input id="txtPaginas" type="text" name="paginas" />
+                <input id="txtPaginas" type="number" name="paginas" />
             </fieldset> 
             <fieldset>
                 <legend>Datos cliente</legend>
